--- a/test-scss/career.html
+++ b/test-scss/career.html
@@ -171,8 +171,8 @@
         <div class="center">
             <div class="d-flex justify-content-center py-60_page flex-wrap">
                 <div class="block d-flex flex-column py-3 col-12 col-md-3">
-                    <h1 class="f-20 mt-md-4 c-black helvetica-75 text-center mb-2">კარიერა</h1>
-                    <span class="f-14 c-light-text helvetica-55 text-center">იპოვე შენთვის სასურველი ვაკანსია და
+                    <h1 class="f-28 mt-md-4 c-black helvetica-75 text-center mb-2">კარიერა</h1>
+                    <span class="f-16 c-card-text helvetica-55 text-center">იპოვე შენთვის სასურველი ვაკანსია და
                         დასაქმდი, დასაქმდი </span>
                 </div>
 
@@ -182,14 +182,14 @@
     </section>
     <section class="details py-60_page">
         <div class="d-flex justify-content-between section flex-column flex-md-row align-items-start">
-            <div class="left__side d-none d-md-flex flex-column  col-md-3 col-12 br-8 bc-gray-light py-3">
+            <div class="left__side d-none d-md-flex flex-column  col-md-3 col-12 br-8 bc-gray-light py-3 top-100 position-sticky">
                 <div>
                     <span class="f-13 c-black helvetica-75 d-block mb-2">ძიება</span>
                     <div class="search-input-parent ">
-                        <input class="search-input border-0 w-100 bc-white" type="text">
+                        <input class="search-input  w-100 bc-white career" type="text">
                     </div>
                 </div>
-                <div class="drop-paren  mt-3">
+                <div class="drop-parent  mt-3">
                     <span class="f-13 c-black helvetica-75 d-block mb-2">კატეგორია</span>
                     <div class=" dropdown-toggle br-8 p-2 bc-white w-100 drop d-flex align-items-center justify-content-between"
                         type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
@@ -236,13 +236,13 @@
                 </div>
                 <div class="d-flex filter__block_career flex-column px-4 bc-gray-light collapse mt-3" id="demo">
                     <div class="pt-4">
-                        <span class="f-13 c-black helvetica-75 d-block mb-2 py-md-3 br-8">ძიება</span>
+                        <span class="f-16 c-black helvetica-75 d-block mb-2 py-md-3 br-8">ძიება</span>
                         <div class="search-input-parent ">
-                            <input class="search-input border-0 w-100 bc-white" type="text">
+                            <input class="search-input career w-100 bc-white c-light-text" type="text">
                         </div>
                     </div>
-                    <div class="drop-paren  mt-3">
-                        <span class="f-13 c-black helvetica-75 d-block mb-2">კატეგორია</span>
+                    <div class="drop-parent  mt-3">
+                        <span class="f-16 c-black helvetica-75 d-block mb-2">კატეგორია</span>
                         <div class=" dropdown-toggle br-8 p-2 bc-white w-100 drop d-flex align-items-center justify-content-between"
                             type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false">
@@ -276,9 +276,9 @@
                     </div>
                     <div>
                         <div class="mt-3 pb-4">
-                            <span class="f-13 c-black helvetica-75 d-block mb-2">ადგილი</span>
+                            <span class="f-16 c-black helvetica-75 d-block mb-2">ადგილი</span>
 
-                            <input class="input w-100 border-0" type="text" placeholder="შეიყვანე ადგილი...">
+                            <input class="input w-100 border-0 search-input career" type="text" placeholder="შეიყვანე ადგილი...">
                         </div>
                     </div>
                 </div>
@@ -293,7 +293,7 @@
                         </div>
 
                     </div>
-                    <span class="f-16 lh-24 c-light-text helvetica-55">დიდ ქართულ და საერთაშორისო კომპანიებს ვეხმარებით
+                    <span class="f-16 lh-24 c-card-text helvetica-55">დიდ ქართულ და საერთაშორისო კომპანიებს ვეხმარებით
                         ციფრულ ანსფორმაციაში. მათთვის ვქმნით სხვადასხვა დანიშნულების საშუალო და დიდი ზომის ციფრულ
                         პროდუქტებს.</span>
                     <div class="d-flex mt-3 mb-md-4 pt-md-1 flex-wrap">
@@ -311,7 +311,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="block border-bottom pt-3 pb-4 pb-md-3">
+                <div class="block border-bottom pt-3 pb-4 pb-md-3 mt-md-4 pt-md-3">
                     <div class="d-flex mb-3 pb-md-1">
                         <img src="./img/career.svg" alt="">
                         <div class="d-flex flex-column pl-2">
@@ -320,7 +320,7 @@
                         </div>
 
                     </div>
-                    <span class="f-16 lh-24 c-light-text helvetica-55">დიდ ქართულ და საერთაშორისო კომპანიებს ვეხმარებით
+                    <span class="f-16 lh-24 c-card-text helvetica-55">დიდ ქართულ და საერთაშორისო კომპანიებს ვეხმარებით
                         ციფრულ ანსფორმაციაში. მათთვის ვქმნით სხვადასხვა დანიშნულების საშუალო და დიდი ზომის ციფრულ
                         პროდუქტებს.</span>
                     <div class="d-flex mt-3 mb-md-4 pt-md-1 flex-wrap">
