--- a/test-scss/career_2.html
+++ b/test-scss/career_2.html
@@ -170,12 +170,12 @@
         <div class="d-flex justify-content-between section flex-column flex-md-row-reverse align-items-start">
             <div
                 class="right__side d-md-flex d-none flex-column align-items-center justify-content-center box-shadow col-md-4 col-lg-3 col-12 br-8 py-3">
-                <div class="d-flex flex-wrap justify-content-between align-items-center w-100 py-1">
+                <div class="d-flex flex-wrap  align-items-center w-100 py-1">
                     <div class=" br-8 mt-2 bc-gray-light py-2 px-3 d-flex  align-items-center">
                         <img class="mr-2" src="./img/wach.svg" alt="">
                         <span class="f-14 c-light-text helvetica-55">Redberry</span>
                     </div>
-                    <div class=" br-8 mt-2 bc-gray-light py-2 px-3 d-flex  align-items-center">
+                    <div class=" br-8 mt-2 ml-2 bc-gray-light py-2 px-3 d-flex  align-items-center">
                         <img class="mr-2" src="./img/location.svg" alt="">
                         <span class="f-14 c-light-text helvetica-55">Redberry</span>
                     </div>
@@ -183,7 +183,7 @@
                         <img class="mr-2" src="./img/full.svg" alt="">
                         <span class="f-14 c-light-text helvetica-55">Redberry</span>
                     </div>
-                    <div class=" br-8 mt-2 bc-gray-light py-2 px-3 d-flex  align-items-center">
+                    <div class=" br-8 mt-2 ml-2 bc-gray-light py-2 px-3 d-flex  align-items-center">
                         <img class="mr-2" src="./img/wallet.svg" alt="">
                         <span class="f-14 c-light-text helvetica-55">Redberry</span>
                     </div>
@@ -200,7 +200,7 @@
 
                     </div>
                     <div class="responsive_overlay d-md-none  box-shadow br-8 px-2 py-3 mb-4">
-                        <div class="d-flex  center flex-wrap justify-content-between align-items-center w-100 py-1">
+                        <div class="d-flex  center flex-wrap  align-items-center w-100 py-1">
                             <div class=" br-8 mt-2 bc-gray-light py-2 px-3 d-flex  align-items-center">
                                 <img class="mr-2" src="./img/wach.svg" alt="">
                                 <span class="f-14 c-light-text helvetica-55">Redberry</span>
@@ -219,14 +219,14 @@
                             </div>
                         </div>
                     </div>
-                    <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex mb-4 pb-md-2">ჩვენ ვართ Redberry –
+                    <span class="f-16 lh-24 c-card-text helvetica-55 lh-24 d-flex mb-4 pb-md-2">ჩვენ ვართ Redberry –
                         ციფრული ტრანსფორმაციის სააგენტო და სტარტაპ სტუდია.</span>
 
-                    <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex mb-4 pb-md-2">დიდ ქართულ და საერთაშორისო
+                    <span class="f-16 lh-24 c-card-text helvetica-55 lh-24 d-flex mb-4 pb-md-2">დიდ ქართულ და საერთაშორისო
                         კომპანიებს ვეხმარებით ციფრულ ტრანსფორმაციაში.
                         მათთვის ვქმნით სხვადასხვა დანიშნულების საშუალო და დიდი ზომის ციფრულ
                         პროდუქტებს.</span>
-                    <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex pb-3">ჩვენი სტარტაპ სტუდია კი ქმნის
+                    <span class="f-16 lh-24 c-card-text helvetica-55 lh-24 d-flex pb-3">ჩვენი სტარტაპ სტუდია კი ქმნის
                         ბაზრისთვის ინოვაციური ბიზნეს მოდელის მქონე
                         ტექნოლოგიებზე დაფუძნებულ სტარტაპებს. აწვდის მათ როგორც seed დაფინანსებას,
                         ასევე ტექნიკურ, მარკეტინგულ, პროდუქტის დიზაინისა და ბიზნესის განვითარებისთვის
@@ -237,27 +237,27 @@
 
                     <ul>
                         <li class="d-flex">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">Backend სერვისების
+                            <span class="f-16 lh-24 c-card-text helvetica-55 lh-24 d-flex">Backend სერვისების
                                 იმპლემენტაცია;</span>
                         </li>
                         <li class="d-flex">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">კომპლექსურ არქიტექტურებთან
+                            <span class="f-16 lh-24 c-card-text helvetica-55 lh-24 d-flex">კომპლექსურ არქიტექტურებთან
                                 მუშაობა;</span>
                         </li>
                         <li class="d-flex">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">Performance ოპტიმიზაციების
+                            <span class="f-16 lh-24 c-card-text helvetica-55 lh-24 d-flex">Performance ოპტიმიზაციების
                                 გაკეთება;</span>
                         </li>
                         <li class="d-flex">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex"> სხვადასხვა
+                            <span class="f-16 lh-24 c-card-text helvetica-55 lh-24 d-flex"> სხვადასხვა
                                 ფართოდ-გამოყენებადი სერვისების ინტეგრაცია;</span>
                         </li>
                         <li class="d-flex">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">ეფექტიანი, მრავალჯერ
+                            <span class="f-16 lh-24 c-card-text helvetica-55 lh-24 d-flex">ეფექტიანი, მრავალჯერ
                                 გამოყენებადი და დოკუმენტირებული კოდის წერა;</span>
                         </li>
                         <li class="d-flex">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">გუნდის წევრებთან ეფექტური
+                            <span class="f-16 lh-24 c-card-text helvetica-55 lh-24 d-flex">გუნდის წევრებთან ეფექტური
                                 კომუნიკაცია.</span>
                         </li>
                     </ul>
@@ -267,57 +267,57 @@
 
                     <ul>
                         <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">Backend სერვისების
+                            <span class="f-16 lh-24 c-card-text helvetica-55 lh-24 d-flex">Backend სერვისების
                                 იმპლემენტაცია;</span>
                         </li>
                         <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">WEB ფრეიმვორქებთან მუშაობის
+                            <span class="f-16 lh-24 c-card-text helvetica-55 lh-24 d-flex">WEB ფრეიმვორქებთან მუშაობის
                                 გამოცდილება: Laravel, Symfony, Django, Flask</span>
                         </li>
                         <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">Git ვერსიის კონტროლის
+                            <span class="f-16 lh-24 c-card-text helvetica-55 lh-24 d-flex">Git ვერსიის კონტროლის
                                 სისტემის გამოყენების ცოდნა</span>
                         </li>
                         <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">HTTP პროტოკოლის მუშაობის
+                            <span class="f-16 lh-24 c-card-text helvetica-55 lh-24 d-flex">HTTP პროტოკოლის მუშაობის
                                 პრინციპები, სასურველია apache ან nginx-თან მუშაობის გამოცდილება</span>
                         </li>
                         <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex"> სასურველია ტესტები წერის
+                            <span class="f-16 lh-24 c-card-text helvetica-55 lh-24 d-flex"> სასურველია ტესტები წერის
                                 გამოცდილება. ტესტ ფრეიმვორქების ცოდნა: PHPUnit, unittest, pytest…</span>
                         </li>
                         <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex"> სასურველია Github actions
+                            <span class="f-16 lh-24 c-card-text helvetica-55 lh-24 d-flex"> სასურველია Github actions
                                 CI/CD ფაიფლაინთან მუშაობის გამოცდილება</span>
                         </li>
                         <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">HTTP პროტოკოლის მუშაობის
+                            <span class="f-16 lh-24 c-card-text helvetica-55 lh-24 d-flex">HTTP პროტოკოლის მუშაობის
                                 პრინციპები, სასურველია apache ან nginx-თან მუშაობის გამოცდილება</span>
                         </li>
                         <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex"> სასურველია ტესტები წერის
+                            <span class="f-16 lh-24 c-card-text helvetica-55 lh-24 d-flex"> სასურველია ტესტები წერის
                                 გამოცდილება. ტესტ ფრეიმვორქების ცოდნა: PHPUnit, unittest, pytest…</span>
                         </li>
                         <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex"> სასურველია Github actions
+                            <span class="f-16 lh-24 c-card-text helvetica-55 lh-24 d-flex"> სასურველია Github actions
                                 CI/CD ფაიფლაინთან მუშაობის გამოცდილება</span>
                         </li>
                         <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">HTTP პროტოკოლის მუშაობის
+                            <span class="f-16 lh-24 c-card-text helvetica-55 lh-24 d-flex">HTTP პროტოკოლის მუშაობის
                                 პრინციპები, სასურველია apache ან nginx-თან მუშაობის გამოცდილება</span>
                         </li>
                         <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex"> სასურველია ტესტები წერის
+                            <span class="f-16 lh-24 c-card-text helvetica-55 lh-24 d-flex"> სასურველია ტესტები წერის
                                 გამოცდილება. ტესტ ფრეიმვორქების ცოდნა: PHPUnit, unittest, pytest…</span>
                         </li>
                         <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex"> სასურველია Github actions
+                            <span class="f-16 lh-24 c-card-text helvetica-55 lh-24 d-flex"> სასურველია Github actions
                                 CI/CD ფაიფლაინთან მუშაობის გამოცდილება</span>
                         </li>
                     </ul>
                 </div>
                 <div class=" box-shadow w-100 d-flex mt-4 p-3 br-8 flex-column flex-sm-row">
-                    <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex"> To apply for this job email your
+                    <span class="f-16 lh-24 c-card-text helvetica-55 lh-24 d-flex"> To apply for this job email your
                         details to</span>
                     <a class="f-16 lh-24 c-blue helvetica-55 lh-24 d-flex ml-0 ml-sm-1">hello@redberry.ge</a>
 
