--- a/test-scss/contact.html
+++ b/test-scss/contact.html
@@ -170,21 +170,21 @@
         <div class="center d-flex align-items-stretch justify-content-between flex-column flex-md-row">
             <div class="left__side col-12 col-md-6 col-lg-5 px-0 px-md-2">
                 <span class="f-28 lh-19 c-black helvetica-75 d-flex mb-3">მოგვწერეთ</span>
-                <span class="f-16 lh-24 c-light-text helvetica-55 d-flex mb-3">ციფრული ინდუსტრიის აკადემია ღიია ყველა დაინტერესებული პირისთვის; </span>
+                <span class="f-16 lh-24 c-card-text helvetica-55 d-flex mb-3">ციფრული ინდუსტრიის აკადემია ღიია ყველა დაინტერესებული პირისთვის; </span>
                 <div class="form pt-md-3 pt-1">
                     <div class="d-flex flex-wrap">
                         <div class="col-lg-6 col-12 pl-0 pr-0 pr-lg-2 pl-lg-0">
                             <label class="mb-2 helvetica-75 c-black f-16" for="id-1" >სახელი და გვარი</label class="mb-2 helvetica-75 c-black f-16">
-                            <input class="input w-100 bc-gray-light" id="id-1" type="text">
+                            <input class="input w-100 bc-input-color" id="id-1" type="text">
                         </div>
                         <div class="col-lg-6 col-12 pl-0 pl-lg-2 pr-0 pr-lg-0">
                             <label class="mb-2 helvetica-75 c-black f-16" for="id-2s" >ელ-ფოსტა</label>
-                            <input class="input w-100 bc-gray-light" id="id-2s" type="text">
+                            <input class="input w-100 bc-input-color" id="id-2s" type="text">
                         </div>
                     </div>
                     <div class="w-100 mt-4">
                         <label class="mb-2 helvetica-75 c-black f-16" for="id-3" >წერილი</label>
-                        <textarea name="" id="id-3"class="w-100 border-1 br-c-border br-8 pl-3 pt-2 bc-gray-light" rows="10"></textarea>
+                        <textarea name="" id="id-3"class="w-100 border-1 br-c-border br-8 pl-3 pt-2 bc-input-color" rows="10"></textarea>
                     </div>
                     <div class="mt-md-3 mt-2">
                         <button class="blue-button">გაგზავნა</button>
@@ -196,15 +196,15 @@
                 <div class="info__blick br-8 bc-gray-light w-100 p-4">
                     <div class="d-flex align-items-start mb-2 pb-1">
                         <img class="mr-2" src="./img/phone.svg" alt="">
-                        <a href="javascript:vodi(0)" class="f-16 lh-24 c-light-text helvetica-55">+995 574 19 20 81</a>
+                        <a href="javascript:vodi(0)" class="f-16 lh-24 c-card-text helvetica-55">+995 574 19 20 81</a>
                     </div>
                     <div class="d-flex align-items-start mb-2 pb-1">
                         <img class="mr-2" src="./img/sms.svg" alt="">
-                        <a href="javascript:vodi(0)" class="f-16 lh-24 c-light-text helvetica-55">info@digitaledu.ge</a>
+                        <a href="javascript:vodi(0)" class="f-16 lh-24 c-card-text helvetica-55">info@digitaledu.ge</a>
                     </div>
                     <div class="d-flex align-items-start mb-2 pb-1">
                         <img class="mr-2" src="./img/location.svg" alt="">
-                        <span href="javascript:vodi(0)" class="f-16 lh-24 c-light-text helvetica-55">ი.ჭავჭავაძის 33ე თბილისი. საქართველო</span>
+                        <span href="javascript:vodi(0)" class="f-16 lh-24 c-card-text helvetica-55">ი.ჭავჭავაძის 33ე თბილისი. საქართველო</span>
                     </div>
                 </div>
                 <div class="map mt-3 pt-2">
