--- a/test-scss/lector.html
+++ b/test-scss/lector.html
@@ -147,8 +147,8 @@
         <div class="center d-flex align-items-md-start align-items-center flex-column flex-md-row">
             <div class="left__side pr-4 pl-0 col-12 col-sm-8 col-md-3 d-flex flex-column align-items-center">
                 <div
-                    class="img-block col-9 p-0 bc-purple overflow-hidden d-flex align-items-end justify-content-center">
-                    <img class="w-100 br-50" src="./img/face.svg" alt="">
+                    class="img-block col-9 max-150 p-0 bc-purple overflow-hidden d-flex align-items-end justify-content-center">
+                    <img class="w-100 br-50 " src="./img/face.svg" alt="">
                 </div>
                 <div class="texts mt-4 text-center border-bottom d-flex align-items-center flex-column pb-4">
                     <span class="c-black f-20 helvetica-55">ნიკოლოზ ერგემლიძე</span>
@@ -157,18 +157,18 @@
                 <div class="donwside d-flex align-items-center flex-column w-100">
                     <a
                         class="c-light-text d-flex mt-3 f-14 helvetica-55 pointer justify-content-center">ergemlidze.com</a>
-                    <div class="imgs col-10 d-flex justify-content-between mt-3">
+                    <div class="imgs col-7 d-flex justify-content-between mt-3">
                         <a href="">
-                            <img src="./img/be.svg" alt="">
+                            <img style="max-width: 22px;" src="./img/be.svg" alt="">
                         </a>
                         <a href="">
-                            <img src="./img/linkedin.svg" alt="">
+                            <img style="max-width: 22px;" src="./img/linkedin.svg" alt="">
                         </a>
                         <a href="">
-                            <img src="./img/fb.svg" alt="">
+                            <img style="max-width: 22px;" src="./img/fb.svg" alt="">
                         </a>
                         <a href="">
-                            <img src="./img/Subtraction.svg" alt="">
+                            <img style="max-width: 22px;" src="./img/Subtraction.svg" alt="">
                         </a>
                     </div>
                 </div>
@@ -178,17 +178,17 @@
                     <ul class="nav h-100 flex-nowrap nav-tabs d-flex align-items-center" id="myTab" role="tablist">
                         <li class="nav-item list mr-4 d-flex align-items-center" role="presentation">
                             <a style="height: 60px;"
-                                class=" nav__a c-light-text c-hover-blue transition helvetica-75 active"
+                                class=" nav__a c-light-text c-hover-blue transition helvetica-75 active lector"
                                 id="biograp-tab" data-toggle="tab" href="#biograp" role="tab" aria-controls="biograp"
                                 aria-selected="true">ბიოგრაფია</a>
                         </li>
                         <li class="nav-item list mr-4 d-flex align-items-center" role="presentation">
-                            <a style="height: 60px;" class=" nav__a c-light-text c-hover-blue transition helvetica-75"
+                            <a style="height: 60px;" class=" nav__a c-light-text c-hover-blue transition helvetica-75 lector"
                                 id="project-tab" data-toggle="tab" href="#project" role="tab" aria-controls="project"
                                 aria-selected="false">პროექტები</a>
                         </li>
                         <li class="nav-item list mr-4 d-flex align-items-center" role="presentation">
-                            <a style="height: 60px;" class=" nav__a c-light-text c-hover-blue transition helvetica-75"
+                            <a style="height: 60px;" class=" nav__a c-light-text c-hover-blue transition helvetica-75 lector"
                                 id="video-tab" data-toggle="tab" href="#video" role="tab" aria-controls="video    "
                                 aria-selected="false">ვიდეო</a>
                         </li>
@@ -219,7 +219,7 @@
                     </div>
                     <div class="tab-pane fade d-flex flex-column flex-md-row mx-n2" id="project" role="tab" aria-labelledby="project-tab">
                         <div class="block col-md-4 col-12 mt-4 px-md-2 px-0">
-                            <div class=" bc-banner br-8 px-3">
+                            <div class=" bc-input-color br-8 px-4">
 
                                 <div class="upside d-flex align-items-center">
                                     <div class="leftside">
@@ -239,7 +239,7 @@
                             </div>
                         </div>
                         <div class="block col-md-4 col-12 mt-4 px-md-2 px-0">
-                            <div class=" bc-banner br-8 px-3">
+                            <div class=" bc-input-color br-8 px-4">
 
                                 <div class="upside d-flex align-items-center">
                                     <div class="leftside">
@@ -259,7 +259,7 @@
                             </div>
                         </div>
                         <div class="block col-md-4 col-12 mt-4 px-md-2 px-0">
-                            <div class=" bc-banner br-8 px-3">
+                            <div class=" bc-input-color br-8 px-4">
 
                                 <div class="upside d-flex align-items-center">
                                     <div class="leftside">
@@ -279,8 +279,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="tab-pane fade d-flex justify-content-center" id="video" role="tab" aria-labelledby="video-tab">
-                        <div class="col-12 col-md-10 px-0 px-md-2 position-relative mt-4">
+                    <div class="tab-pane mx-auto fade d-flex justify-content-center" id="video" role="tab" aria-labelledby="video-tab">
+                        <div class="col-12 d-flex justify-content-center col-md-10 px-0 px-md-2 position-relative mt-4">
                             <img class="w-100 pointer" src="./img/Group 1641.svg" alt="">
                             <span class="c-white f-24 helvetica-55 position-absolute left-30 bottom-25">UI&UX დიზაინის კურსი</span>
 
