--- a/test-scss/mediakit.html
+++ b/test-scss/mediakit.html
@@ -190,7 +190,7 @@
     <section class="join__us py-60">
         <div class="center d-flex flex-column mb-md-4 mb-3">
             <span class="helvetica-75 d-inline-block mb-md-4 mb-2 f-30 c-black">Downloads</span>
-            <span class="helvetica-55 d-inline-block f-16 c-light-text">We’ve provided vector versions of our logo and
+            <span class="helvetica-55 d-inline-block f-16 c-card-text">We’ve provided vector versions of our logo and
                 mark for certain uses listed below.</span>
         </div>
         <div class="center">
@@ -236,7 +236,7 @@
         <div class="center d-flex justify-content-between flex-column flex-md-row">
             <div class="left__side position-relative d-flex flex-column col-12 col-md-6 p-0">
                 <span class="helvetica-75 d-inline-block mb-4 f-30 c-black">ფერები</span>
-                <span class="helvetica-55 d-inline-block f-16 c-light-text">ციფრული აკადეიმიის ლოგოს ფერები და მისი
+                <span class="helvetica-55 d-inline-block f-16 c-cerd-text">ციფრული აკადეიმიის ლოგოს ფერები და მისი
                     გამოყენების წესები</span>
                 <div class="color-block mt-3">
                     <div class="color-texts bc-blue helvetica-55 c-white py-md-5 px-2 py-4 text-center lh-10 br-8">
@@ -284,7 +284,7 @@
 
 
                 <div class="block mt-4">
-                    <div class="bc-banner br-8 d-flex align-items-center justify-content-center py-5">
+                    <div class="bc-gray-light br-8 d-flex align-items-center justify-content-center py-5">
                         <img class="my-4" src="./img/download_1.svg" alt="">
                     </div>
                     <span class="f-14 c-light-text helvetica-55 d-block pt-2 text-center">ღია ფონზე გამოიყენეთ ლურჯი
