--- a/test-scss/vlog.html
+++ b/test-scss/vlog.html
@@ -197,7 +197,7 @@
     <section class=" pb-md-3 pb-2 mt-md-1 mt-3">
         <div class="center">
             <div class="d-flex flex-wrap main courses__main row master-class">
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-1">
+                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-md-3 my-1">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side d-flex align-items-start overflow-hidden ">
@@ -217,7 +217,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-1">
+                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-md-3 my-1">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side d-flex align-items-start overflow-hidden ">
@@ -236,7 +236,7 @@
                             </div>
                         </div>
                     </div>
-                </div>                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-1">
+                </div>                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-md-3 my-1">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side d-flex align-items-start overflow-hidden ">
@@ -255,7 +255,7 @@
                             </div>
                         </div>
                     </div>
-                </div>                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-1">
+                </div>                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-md-3 my-1">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side d-flex align-items-start overflow-hidden ">
@@ -274,7 +274,7 @@
                             </div>
                         </div>
                     </div>
-                </div>                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-1">
+                </div>                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-md-3 my-1">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side d-flex align-items-start overflow-hidden ">
@@ -293,7 +293,7 @@
                             </div>
                         </div>
                     </div>
-                </div>                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-1">
+                </div>                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-md-3 my-1">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side d-flex align-items-start overflow-hidden ">
@@ -312,7 +312,7 @@
                             </div>
                         </div>
                     </div>
-                </div>                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-1">
+                </div>                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-md-3 my-1">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side d-flex align-items-start overflow-hidden ">
@@ -331,7 +331,7 @@
                             </div>
                         </div>
                     </div>
-                </div>                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-1">
+                </div>                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-md-3 my-1">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side d-flex align-items-start overflow-hidden ">
