--- a/test-scss/vlog_inner.html
+++ b/test-scss/vlog_inner.html
@@ -232,7 +232,7 @@
                             <span class="f-14 text-center d-none d-md-flex c-black helvetica-55">არ გამოტოვო საუკეთესო
                                 შეთავაზებები! .</span>
                             <button
-                                class="bc-white border-0 br-8 c-blue c-hover-white helvetica-75 hover-bc-blue mt-4 px-2 py-3 transition">გაიგე
+                                class="bc-white mb-3 border-0 br-8 c-blue c-hover-white helvetica-75 hover-bc-blue mt-4 px-2 py-3 transition">გაიგე
                                 მეტი</button>
 
                         </div>
