--- a/test-scss/work.html
+++ b/test-scss/work.html
@@ -197,7 +197,7 @@
 
                     <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-1"
                         data-toggle="modal" data-target="#exampleModal">
-                        <div class="block br-8 pointer">
+                        <div class="block br-8 pointer mb-md-4">
                             <article class="article d-flex flex-column">
                                 <img class="w-100 br-tl br-tr" src="./img/Group 804.svg" alt="">
                                 <span class="f-16 px-3 c-black helvetica-75 d-block mt-1 mb-4">სტუდენტის </span>
@@ -213,7 +213,7 @@
                     </div>
                     <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-1"
                         data-toggle="modal" data-target="#exampleModal">
-                        <div class="block br-8 pointer">
+                        <div class="block br-8 pointer mb-md-4">
                             <article class="article d-flex flex-column">
                                 <img class="w-100 br-tl br-tr" src="./img/Group 804.svg" alt="">
                                 <span class="f-16 px-3 c-black helvetica-75 d-block mt-1 mb-4">სტუდენტის </span>
@@ -229,7 +229,7 @@
                     </div>
                     <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-1"
                         data-toggle="modal" data-target="#exampleModal">
-                        <div class="block br-8 pointer">
+                        <div class="block br-8 pointer mb-md-4">
                             <article class="article d-flex flex-column">
                                 <img class="w-100 br-tl br-tr" src="./img/Group 804.svg" alt="">
                                 <span class="f-16 px-3 c-black helvetica-75 d-block mt-1 mb-4">სტუდენტის </span>
@@ -245,7 +245,7 @@
                     </div>
                     <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-1"
                         data-toggle="modal" data-target="#exampleModal">
-                        <div class="block br-8 pointer">
+                        <div class="block br-8 pointer mb-md-4">
                             <article class="article d-flex flex-column">
                                 <img class="w-100 br-tl br-tr" src="./img/Group 804.svg" alt="">
                                 <span class="f-16 px-3 c-black helvetica-75 d-block mt-1 mb-4">სტუდენტის </span>
@@ -261,7 +261,7 @@
                     </div>
                     <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-1"
                         data-toggle="modal" data-target="#exampleModal">
-                        <div class="block br-8 pointer">
+                        <div class="block br-8 pointer mb-md-4">
                             <article class="article d-flex flex-column">
                                 <img class="w-100 br-tl br-tr" src="./img/Group 804.svg" alt="">
                                 <span class="f-16 px-3 c-black helvetica-75 d-block mt-1 mb-4">სტუდენტის </span>
@@ -277,7 +277,7 @@
                     </div>
                     <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-1"
                         data-toggle="modal" data-target="#exampleModal">
-                        <div class="block br-8 pointer">
+                        <div class="block br-8 pointer mb-md-4">
                             <article class="article d-flex flex-column">
                                 <img class="w-100 br-tl br-tr" src="./img/Group 804.svg" alt="">
                                 <span class="f-16 px-3 c-black helvetica-75 d-block mt-1 mb-4">სტუდენტის </span>
@@ -293,7 +293,7 @@
                     </div>
                     <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-1"
                         data-toggle="modal" data-target="#exampleModal">
-                        <div class="block br-8 pointer">
+                        <div class="block br-8 pointer mb-md-4">
                             <article class="article d-flex flex-column">
                                 <img class="w-100 br-tl br-tr" src="./img/Group 804.svg" alt="">
                                 <span class="f-16 px-3 c-black helvetica-75 d-block mt-1 mb-4">სტუდენტის </span>
@@ -309,7 +309,7 @@
                     </div>
                     <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-1"
                         data-toggle="modal" data-target="#exampleModal">
-                        <div class="block br-8 pointer">
+                        <div class="block br-8 pointer mb-md-4">
                             <article class="article d-flex flex-column">
                                 <img class="w-100 br-tl br-tr" src="./img/Group 804.svg" alt="">
                                 <span class="f-16 px-3 c-black helvetica-75 d-block mt-1 mb-4">სტუდენტის </span>
@@ -325,7 +325,7 @@
                     </div>
                     <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-1"
                         data-toggle="modal" data-target="#exampleModal">
-                        <div class="block br-8 pointer">
+                        <div class="block br-8 pointer mb-md-4">
                             <article class="article d-flex flex-column">
                                 <img class="w-100 br-tl br-tr" src="./img/Group 804.svg" alt="">
                                 <span class="f-16 px-3 c-black helvetica-75 d-block mt-1 mb-4">სტუდენტის </span>
@@ -341,7 +341,7 @@
                     </div>
                     <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-1"
                         data-toggle="modal" data-target="#exampleModal">
-                        <div class="block br-8 pointer">
+                        <div class="block br-8 pointer mb-md-4">
                             <article class="article d-flex flex-column">
                                 <img class="w-100 br-tl br-tr" src="./img/Group 804.svg" alt="">
                                 <span class="f-16 px-3 c-black helvetica-75 d-block mt-1 mb-4">სტუდენტის </span>
@@ -364,12 +364,12 @@
     <div class="modal fade " id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-section">
             <div class="modal-content">
-                <div class="modal-header d-flex justify-content-between border-0">
-                    <div class="d-flex align-items-center">
-                        <img class="mr-2" src="./img/Group 793.svg" alt="">
+                <div class="modal-header height-100 align-items-center d-flex justify-content-between border-0">
+                    <div class="d-flex align-items-center pl-md-3 ml-md-2">
+                        <img class="mr-2 height-50" src="./img/Group 793.svg" alt="">
                         <div class="d-flex flex-column">
                             <span class="f-16 c-black helvetica-75">სტუდენტის ნამუშევარი_სახელი</span>
-                            <span class="f-14 c-light-text helvetica-55">ედვარდ გულაშვილი</span>
+                            <span class="f-12 c-light-text helvetica-55">ედვარდ გულაშვილი</span>
                         </div>
                     </div>
                     <div class="d-flex align-items-center">
